--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name:         ngl_viewer
 version:      0.0.1
 author:       Herman Bergwerf <hermanbergwerf@gmail.com>
-description:  NGL viewer
+description:  NGL Viewer Dart library
 homepage:     https://github.com/molview/ngl-viewer
 environment:
   sdk:        '>=1.8.0 <2.0.0'
